<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ListGet</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="login_user">Email/User ID</string>
    <string name="password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="title_activity_list">List</string>
    <string name="title_activity_item">Item</string>
    <string name="example_list">Example List</string>
    <string name="example_item">Example Item</string>
    <string name="action_add_list">+ Add New List</string>
    <string name="action_add_item">+ Add New Item</string>
    <string name="action_add_friend">+ Add Friend</string>
    <string name="action_add_new_friend">+ ADD New Friend</string>
    <string name="title_activity_edit__item">Edit_Item</string>
    <string name="title_activity_add_friend">AddFriend</string>
    <string name="title_add_friend">Add Friends to List</string>
    <string name="example_friend1">Chi En</string>
    <string name="example_friend2">Jason</string>
    <string name="example_friend3">D\'arcy</string>
    <string name="example_friend4">Amigo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="x">×</string>
    <string name="edit_list">Edit List Name</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="memo">memo</string>
    <string name="item">item</string>
    <string name="list_name">List Name</string>
    <string name="title_activity_edit_list">EditListActivity</string>
    <string name="title_activity_edit_item">EditItemActivity</string>
    <string name="title_activity_display_test">DisplayTest</string>
    <string name="title_activity_login">Login</string>
    <string name="login_name">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirm">Password Confirm</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="clear">Clear</string>
    <string name="email">e-mail</string>
    <string name="list_owned">My Lists</string>
    <string name="list_shared">Shared Lists</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_contact_share">ContactShare</string>
    <string name="title_activity_people_list">PeopleListActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
