<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Register">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <TextView
            android:text="@string/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/password"/>

        <TextView
            android:text="@string/login_password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textVisiblePassword"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_confirm"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:id="@+id/confirm_register_button"
            android:onClick="register"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:id="@+id/clear_button_id"
            android:onClick="clear"
            />

    </TableLayout>

</LinearLayout>