<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:minWidth="200dip"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dip"
            android:paddingRight="0dip"
            android:text="@string/edit_list"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/b_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingRight="20dip"
            android:paddingLeft="0dip"
            android:text="@string/x"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip" >

        <EditText
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:hint="@string/list_name"
            android:imeOptions="actionDone"
            android:minWidth="180dip"
            android:inputType="text"
            android:padding="2dip"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/b_save"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/save"/>

            <Button
                android:id="@+id/b_delete"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:text="@string/delete"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>