<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:background="@color/bg_color"
    android:onClick="login">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/txt_color"
        android:textSize="45dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/grey" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginTop="15dp"
        android:background="@color/grey"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_user"
        android:id="@+id/textView2"
        android:textColor="@color/txt_color"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText2"
        android:textColor="@color/txt_color"
        android:layout_alignStart="@+id/editText2" />

    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:id="@+id/button"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:clickable="true"
        android:background="@color/btn_blue"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/button2"
        android:layout_toEndOf="@+id/button"
        android:background="@color/btn_red"
        android:layout_alignTop="@+id/button"
        android:layout_alignEnd="@+id/editText2"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
