
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_color"
    tools:context="com.example.nav.listget.Activities.AddFriend">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_add_friend"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/txt_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_friend1"
        android:id="@+id/textView4"
        android:layout_marginTop="30dp"
        android:textColor="@color/txt_color"
        android:textSize="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_friend2"
        android:id="@+id/textView5"
        android:textColor="@color/txt_color"
        android:textSize="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_friend3"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:textColor="@color/txt_color"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:paddingRight="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_friend4"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_alignEnd="@+id/textView6"
        android:textColor="@color/txt_color"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:paddingRight="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox"
        android:layout_alignTop="@+id/textView4"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView4"
        android:checked="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox2"
        android:layout_alignStart="@+id/checkBox"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignBottom="@+id/textView5" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox3"
        android:layout_alignTop="@+id/textView6"
        android:layout_alignStart="@+id/checkBox2"
        android:layout_alignBottom="@+id/textView6" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New CheckBox"
        android:id="@+id/checkBox4"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignStart="@+id/checkBox3"
        android:layout_alignBottom="@+id/textView7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/login_user"
        android:textColor="@color/txt_color"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_add_new_friend"
        android:id="@+id/button"
        android:layout_toEndOf="@+id/textView3"
        android:background="@color/btn_red"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/checkBox3" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:id="@+id/button2"
        android:background="@color/btn_blue"
        android:clickable="false"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>