<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nav.listget.List"
    android:background="@color/bg_color">

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add_item"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/btn_red" />

    <Button
        android:layout_width="@dimen/btn_width"
        android:layout_height="40dp"
        android:text="@string/example_item"
        android:id="@+id/button2"
        android:background="@color/btn_blue"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="false"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="@dimen/btn_width"
        android:layout_height="40dp"
        android:text="@string/example_item"
        android:background="@color/btn_blue"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="@dimen/btn_width"
        android:layout_height="40dp"
        android:text="@string/example_item"
        android:background="@color/btn_blue"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox"
        android:layout_toEndOf="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:checked="true"
        android:layout_alignEnd="@+id/checkBox2"
        android:layout_alignParentTop="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox2"
        android:layout_alignTop="@+id/button3"
        android:layout_toEndOf="@+id/button3"
        android:layout_alignBottom="@+id/button3" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBox3"
        android:layout_alignTop="@+id/button4"
        android:layout_toEndOf="@+id/button4"
        android:layout_alignBottom="@+id/button4" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_add_friend"
        android:id="@+id/button5"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/checkBox3"
        android:background="@color/btn_red"
        android:onClick="viewAddFriend" />

</RelativeLayout>
